--- a/css/main.css
+++ b/css/main.css
@@ -707,28 +707,32 @@ nav ul li:last-of-type {
 }
 
 .sub-menu {
+    display: none;
     width:15em;
     padding:5px 0px;
     position:absolute;
     top:75%;
     z-index:-1;
     opacity:0;
-    transition:opacity linear 0.15s;
+    transition:opacity linear 300ms;
     box-shadow:0px 2px 3px rgba(0,0,0,0.2);
     background:#f1f2f3;
 }
-
+#home .sub-menu li a {
+    color: #2c3e50;
+}
 .sub-menu li {
     display:block;
     font-size:16px;
     text-align: left;
     margin: 0;
 }
-
+.menu li:hover .sub-menu {
+    display: block;
+}
 .sub-menu li a {
     padding:.75em 1.5em;
     display:block;
-
 }
 
 .sub-menu li a:hover, .sub-menu .current-item a {
