--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ body, html {
 Typography
 */
 h1 {
-    font: normal bold 36px/1 "Cormorant Garamond", Garamond, Baskerville, serif;
+    font: normal bold 30px/1 "Cormorant Garamond", Garamond, Baskerville, serif;
     color: #2c3e50;
     text-align: center;
     margin: 0;
@@ -171,12 +171,11 @@ Button styles
 .button {
     background-color: #3498db;
     color: #fff;
-    padding: 1em 4em;
+    padding: 1.5em 4em;
     -webkit-transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
     transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
     display: inline-block;
-    /*width: 100%;*/
-    line-height: .75em;
+    line-height: 1em;
     min-width: 10em;
     vertical-align: middle;
     position: relative;
@@ -199,28 +198,37 @@ Button styles
 }
 .button-arrow {
     position: relative;
+    -o-transition: background-color 300ms ease-out;
+    -moz-transition: background-color 300ms ease-out;
     -webkit-transition: background-color 300ms ease-out;
     transition: background-color 300ms ease-out;
 }
 .button-arrow span, .button-arrow svg {
     display: inline-block;
     position: relative;
+    -o-transition: background-color 300ms ease-out;
+    -moz-transition: background-color 300ms ease-out;
     -webkit-transition: all 300ms ease-out;
     transition: all 300ms ease-out;
 }
 .button-arrow:hover span{
+    -o-transform: translate3d(-1rem, 0, 0);
+    -moz-transform: translate3d(-1rem, 0, 0);
     -webkit-transform: translate3d(-1rem, 0, 0);
     transform: translate3d(-1rem, 0, 0);
 }
 .button-arrow svg {
     position: absolute;
     width: 1.1em;
-    right: 0px;
-    right: 0rem;
+    right: 0;
     opacity: 0;
     top: 50%;
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
+    -o-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
     -webkit-transition: all 300ms ease-out;
     transition: all 300ms ease-out;
 }
@@ -740,7 +748,7 @@ nav ul li:last-of-type {
 }
 
 #home .logo-svg {
-    margin-left: 15px;
+    margin-left: -15px;
 }
 @media (min-width: 576px) {
     .logo-svg {
