--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,6 @@ h1 {
 h2 {
     font: normal bold 24px/1 "Cormorant Garamond", Garamond, Baskerville, serif;
     color: #2c3e50;
-    /*text-align: center;*/
 }
 h3 {
     font: normal normal 18px/1.2 "Work Sans", Helvetica, Arial, sans-serif;
@@ -171,7 +170,7 @@ Button styles
 .button {
     background-color: #3498db;
     color: #fff;
-    padding: 1.5em 4em;
+    padding: 2em 4em;
     -webkit-transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
     transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
     display: inline-block;
@@ -180,7 +179,7 @@ Button styles
     vertical-align: middle;
     position: relative;
     overflow: hidden;
-    font-family: "Work Sans", sans-serif;
+    font-family: "Work Sans", Helvetica, Arial, sans-serif;
     font-size: .875em;
 }
 #home .button {
@@ -243,7 +242,7 @@ Button styles
 @media (min-width: 400px) {
     .button {
         padding: 1.5em 3em;
-        min-width: 160px;
+        min-width: 140px;
         width: auto;
     }
 }
@@ -251,7 +250,7 @@ Button styles
 
 @media (min-width: 576px) {
     h1 {
-        font-size: 40px;
+        font-size: 36px;
     }
 }
 
@@ -279,9 +278,6 @@ Button styles
     }
 }
 
-@media (min-width: 1200px) {
-
-}
 
 /*
 Home styles
@@ -748,7 +744,8 @@ nav ul li:last-of-type {
 }
 
 #home .logo-svg {
-    margin-left: -15px;
+    margin-left: 15px;
+    height: 20px;
 }
 @media (min-width: 576px) {
     .logo-svg {
@@ -877,7 +874,6 @@ nav ul li:last-of-type {
     display: block;
     width: 100%;
 }
-
 .wrap ul.wrap-nav li a {
     font-weight: normal;
     font-size: 36px;
@@ -885,8 +881,12 @@ nav ul li:last-of-type {
     letter-spacing: normal;
     display: block;
     line-height: 2;
+    text-align: center;
     text-decoration: none;
     transition: all 500ms linear;
+}
+.wrap ul.wrap-nav li a {
+    text-align: center;
 }
 .wrap ul.wrap-nav li a:hover {
     transition: all 500ms ease-in-out;
@@ -895,6 +895,7 @@ nav ul li:last-of-type {
 .wrap ul.wrap-nav ul li {
     display: block;
 }
+
 .link1 {
     animation-name: fadeDown;
     animation-duration: 300ms;
@@ -964,12 +965,15 @@ Contact page
     margin-bottom: 0;
 }
 #map {
-    height: 400px;
+    height: 300px;
     width: 100%;
 }
-
+#map img {
+    height: 300px;
+}
 .half-width {
     width: 100%;
+    height: 500px;
     padding-top: 1em;
     padding-bottom: 1em;
 }
@@ -993,10 +997,7 @@ Contact page
 .location a {
     color: #3498db;
 }
-#map {
-    height: 30em;
-    width: 100%;
-}
+
 
 
 @media (min-width: 768px) {
@@ -1030,6 +1031,7 @@ Contact page
     }
     #map {
         width: 50%;
+        height: 500px;
         display: inline-block;
         float: right;
         margin:0;
@@ -1091,7 +1093,6 @@ footer .row {
 @media (min-width: 500px) {
     footer {
         height: 300px;
-        /*padding-bottom: 16px;*/
     }
     main {
         margin-bottom: 300px;
@@ -1115,6 +1116,9 @@ Properties
 #properties {
     background-color: #fff;
     width: 100%;
+}
+#properties .wrap ul.wrap-nav li a {
+    text-align: center;
 }
 .properties-grid {
     margin-top: 2em;
