--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,6 @@ body, html {
     -moz-osx-font-smoothing: grayscale;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
     box-sizing: border-box;
 }
 
@@ -965,13 +964,13 @@ Contact page
     padding-bottom: 24px;
     margin-bottom: 0;
 }
-#map {
-    height: 300px;
-    width: 100%;
-}
-#map img {
-    height: 300px;
-}
+/*#map {*/
+    /*height: 300px;*/
+    /*width: 100%;*/
+/*}*/
+/*#map img {*/
+    /*height: 300px;*/
+/*}*/
 .half-width {
     width: 100%;
     height: 500px;
