--- a/css/main.css
+++ b/css/main.css
@@ -1060,6 +1060,8 @@ footer {
     bottom:0;
     width: 100%;
     padding: 48px 0 24px 0;
+    -webkit-backface-visibility: hidden;
+
 }
 footer p {
     color: white;
@@ -1093,6 +1095,7 @@ footer .row {
 @media (min-width: 500px) {
     footer {
         height: 300px;
+        bottom: 0;
     }
     main {
         margin-bottom: 300px;
