still trying to fix footer

--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ Button styles
 .button {
     background-color: #3498db;
     color: #fff;
-    padding: 2em 4em;
+    padding: 1.5em 4em;
     -webkit-transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
     transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
     display: inline-block;
@@ -964,13 +964,13 @@ Contact page
     padding-bottom: 24px;
     margin-bottom: 0;
 }
-/*#map {*/
-    /*height: 300px;*/
-    /*width: 100%;*/
-/*}*/
-/*#map img {*/
-    /*height: 300px;*/
-/*}*/
+#map {
+    height: 300px;
+    width: 100%;
+}
+#map img {
+    height: 300px;
+}
 .half-width {
     width: 100%;
     height: 500px;
@@ -1056,12 +1056,11 @@ footer {
     background: #3498db;
     color: white;
     position: fixed;
+    -webkit-backface-visibility: hidden;
     z-index: 1;
     bottom:0;
     width: 100%;
     padding: 48px 0 24px 0;
-    -webkit-backface-visibility: hidden;
-
 }
 footer p {
     color: white;
