--- a/css/main.css
+++ b/css/main.css
@@ -965,13 +965,17 @@ Contact page
     margin-bottom: 0;
 }
 #map {
-    height: 300px;
     width: 100%;
+    height: 350px;
+    display: block;
+    margin:0;
+    padding: 0;
 }
 #map img {
-    height: 300px;
+    height: 350px;
 }
 .half-width {
+    display: block;
     width: 100%;
     height: 500px;
     padding-top: 1em;
