--- a/css/main.css
+++ b/css/main.css
@@ -512,7 +512,7 @@ Properties-inner
     border-bottom: 1px solid #e6e6e6;
 }
 #services {
-    padding-bottom: 160px;
+    padding-bottom: 5em;
 }
 .about-list {
     list-style: bullet;
@@ -973,7 +973,7 @@ Contact page
 }
 .half-width {
     width: 100%;
-    height: 500px;
+    height: 400px;
     padding-top: 1em;
     padding-bottom: 1em;
 }
