--- a/css/main.css
+++ b/css/main.css
@@ -702,7 +702,8 @@ nav ul li:last-of-type {
     top: 26.5px;
 }
 .logo-svg {
-    max-width: 100%;
+    /*max-width: 100%;*/
+    height: 12px;
 }
 .menu li:hover .sub-menu {
     z-index:1;
@@ -743,7 +744,8 @@ nav ul li:last-of-type {
 }
 
 #home .logo-svg {
-    max-width: 100%;
+    /*max-width: 100%;*/
+    height: 12px;
 }
 
 .hamburger {
