display block for contact page

--- a/css/main.css
+++ b/css/main.css
@@ -1038,6 +1038,7 @@ Contact page
         float: none;
         margin-bottom: 1.5em;
         width: 250px;
+        display: block;
     }
 
     .half-width {
