--- a/css/main.css
+++ b/css/main.css
@@ -693,7 +693,8 @@ nav ul li:last-of-type {
     opacity: 1;
 }
 .links {
-    visibility: hidden;
+    /*visibility: hidden;*/
+    display: none;
 }
 
 .site-title {
@@ -704,8 +705,8 @@ nav ul li:last-of-type {
 }
 .logo-svg {
     max-width: 100%;
-    height: 14px;
     margin: 0 10px 0 0;
+    background-size: contain;
     overflow: visible !important;
     white-space: normal !important;
 }
@@ -749,8 +750,8 @@ nav ul li:last-of-type {
 
 #home .logo-svg {
     max-width: 100%;
-    height: 14px;
     margin: 0 10px 0 0;
+    background-size: contain;
     overflow: visible !important;
     white-space: normal !important;
 }
@@ -942,7 +943,8 @@ nav ul li:last-of-type {
 
 @media (min-width: 769px) {
     .links {
-        visibility: visible;
+        /*visibility: visible;*/
+        display: block;
         cursor: pointer;
     }
 }
